1. Fix an issue on IE where the list item in sitemap is not styled correctly. 2. Fix an issue on FF, Chrome, Safari where the hover over a link does not change the color.

--- a/src/client/FranceTel/css/ft_sitemap.css
+++ b/src/client/FranceTel/css/ft_sitemap.css
@@ -117,3 +117,28 @@
     padding: 0px 3px 0px 2px;
     list-style-type: none;
 }
+
+.sitemap_menu ul li a
+{
+    text-decoration: none;
+} 
+
+.sitemap_menu ul li a:link
+{
+    color: #000000;
+} 
+
+.sitemap_menu ul li a:hover
+{
+    color: #FF5500;
+} 
+
+.sitemap_menu ul li a:visited
+{
+    color: #000000;
+} 
+
+.sitemap_menu ul li a:focus
+{
+    outline-style: none;
+} 
